--- a/view/cms-user/index/edit-profile.phtml
+++ b/view/cms-user/index/edit-profile.phtml
@@ -81,7 +81,7 @@ if ($form->has('locale')) {
     ]);
 }
 
-$form->get('submit')->setAttribute('value', 'Edit profile')
+$form->get('submit')->setAttribute('value', 'Edit Profile')
     ->setOption('twbs', [
         'element' => ['class' => 'btn-block'],
         'col' => ['class' => 'col-xs-12 col-sm-8'],
