--- a/view/layout/nav-menu.phtml
+++ b/view/layout/nav-menu.phtml
@@ -11,4 +11,4 @@
 namespace CmsUser;
 
 ?>
-<?= $this->navigation('Zend\\Navigation\\CmsUserNav')->menu()->setUlClass($this->class ?: 'nav sidenav info-block border-radius-base')->setAddClassToListItem();
+<?= $this->navigation('Zend\\Navigation\\CmsUser')->menu()->setUlClass($this->class ?: 'nav sidenav info-block border-radius-base')->setAddClassToListItem();
