--- a/view/layout/navbar-menu.phtml
+++ b/view/layout/navbar-menu.phtml
@@ -11,4 +11,4 @@
 namespace CmsUser;
 
 ?>
-<?= $this->navigation('Zend\\Navigation\\CmsUserNavbar')->menu()->setUlClass($this->class ?: 'nav navbar-nav navbar-right')->setAddClassToListItem();
+<?= $this->navigation('Zend\\Navigation\\CmsUserIdentity')->menu()->setUlClass($this->class ?: 'nav navbar-nav navbar-right')->setAddClassToListItem();
