--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -12,9 +12,9 @@ namespace CmsUser;
 
 ?>
 <?= $this->render('layout/header'); ?>
-
 <div class="container" id="content">
   <div class="row">
+  <?php if ($this->cmsIdentity()): ?>
     <div class="col-sm-3 col-sm-push-9">
       <?= $this->render('layout/cmsuser-nav-menu'); ?>
     </div>
@@ -22,7 +22,12 @@ namespace CmsUser;
       <?= $this->cmsMessages(null, ['class' => 'col-sm-12']); ?>
       <?= $this->content; ?>
     </div>
+  <?php else: ?>
+    <div class="col-sm-10 col-md-offset-1">
+      <?= $this->cmsMessages(null, ['class' => 'col-sm-12']); ?>
+      <?= $this->content; ?>
+    </div>
+  <?php endif; ?>
   </div>
 </div> <!-- /container -->
-
 <?= $this->render('layout/footer');
